crates/reinhardt-core/macros/tests/ui/settings/fail/composition_empty_settings.rs
use reinhardt_macros::settings;

#[settings()]
pub struct BadSettings;

fn main() {}
