crates/reinhardt-core/macros/tests/ui/settings/fail/composition_empty_settings.stderr
error: #[settings()] requires at least one fragment. Use `#[settings(core: CoreSettings)]` for core-only settings.
 --> tests/ui/settings/fail/composition_empty_settings.rs:3:1
  |
3 | #[settings()]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
